[package]
name = "path-absolutize"
version = "3.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/path-absolutize"
homepage = "https://magiclen.org/path-absolutize"
keywords = ["path", "dot", "dedot", "absolute", "canonical"]
categories = ["parser-implementations", "filesystem"]
description= "A library for extending `Path` and `PathBuf` in order to get an absolute path and remove the containing dots."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/path-absolutize"
branch = "master"

[dependencies]
path-dedot = "3"

[dev-dependencies]
bencher = "0.1.5"

[target.'cfg(windows)'.dev-dependencies]
slash-formatter = "2.2.6"

[features]
lazy_static_cache = ["path-dedot/lazy_static_cache"]
unsafe_cache = ["path-dedot/unsafe_cache"]

[[bench]]
name = "bench"
harness = false
