[package]
name = "path-absolutize"
version = "3.1.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/magiclen/path-absolutize"
homepage = "https://magiclen.org/path-absolutize"
keywords = ["path", "dot", "dedot", "absolute", "canonical"]
categories = ["parser-implementations", "filesystem"]
description = "A library for extending `Path` and `PathBuf` in order to get an absolute path and remove the containing dots."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/bench.rs"]

[dependencies]
path-dedot = "3.1.1"

[dev-dependencies]
bencher = "0.1.5"

[target.'cfg(windows)'.dev-dependencies]
slash-formatter = "3"

[features]
once_cell_cache = ["path-dedot/once_cell_cache"]
lazy_static_cache = ["path-dedot/lazy_static_cache"]
unsafe_cache = ["path-dedot/unsafe_cache"]
use_unix_paths_on_wasm = ["path-dedot/use_unix_paths_on_wasm"]

[[bench]]
name = "bench"
harness = false
